@@ -19,7 +19,6 @@ import android.app.ProgressDialog;
 import android.content.DialogInterface;
 import android.content.Intent;
 import android.content.res.Configuration;
-import android.content.res.Resources;
 import android.net.Uri;
 import android.os.Bundle;
 import android.os.Environment;
@@ -49,6 +48,7 @@ import cgeo.geocaching.filter.cgFilterBySize;
 import cgeo.geocaching.filter.cgFilterByTrackables;
 import cgeo.geocaching.filter.cgFilterByType;
 import cgeo.geocaching.sorting.CacheComparator;
+import cgeo.geocaching.sorting.DateComparator;
 import cgeo.geocaching.sorting.DifficultyComparator;
 import cgeo.geocaching.sorting.GeocodeComparator;
 import cgeo.geocaching.sorting.InventoryComparator;
@@ -121,6 +121,7 @@ public class cgeocaches extends AbstractListActivity {
 	private static final int SUBMENU_FILTER = 58;
 	private static final int SUBMENU_IMPORT = 59;
 	private static final int SUBMENU_MANAGE_HISTORY = 60;
+	private static final int MENU_SORT_DATE = 61;
 
 	private String action = null;
 	private String type = null;
@@ -132,17 +133,12 @@ public class cgeocaches extends AbstractListActivity {
 	private String username = null;
 	private Long searchId = null;
 	private ArrayList<cgCache> cacheList = new ArrayList<cgCache>();
-	private cgeoapplication app = null;
-	private Resources res = null;
 	private cgCacheListAdapter adapter = null;
 	private LayoutInflater inflater = null;
 	private View listFooter = null;
 	private TextView listFooterText = null;
-	private cgSettings settings = null;
-	private cgBase base = null;
-	private cgWarning warning = null;
 	private ProgressDialog waitDialog = null;
-	private Double northHeading = new Double(0);
+	private Double northHeading = Double.valueOf(0);
 	private cgGeo geo = null;
 	private cgDirection dir = null;
 	private cgUpdateLoc geoUpdate = new update();
@@ -183,7 +179,7 @@ public class cgeocaches extends AbstractListActivity {
 				setAdapter();
 
 				if (cacheList == null) {
-					warning.showToast(res.getString(R.string.err_list_load_fail));
+					showToast(res.getString(R.string.err_list_load_fail));
 					setMoreCaches(false);
 				} else {
 					final Integer count = app.getTotal(searchId);
@@ -199,7 +195,7 @@ public class cgeocaches extends AbstractListActivity {
 					}
 				}
 
-				if (cacheList != null && app.getError(searchId) != null && app.getError(searchId).equalsIgnoreCase(cgBase.errorRetrieve.get(-7)) == true) {
+				if (cacheList != null && app.getError(searchId) != null && app.getError(searchId).equalsIgnoreCase(cgBase.errorRetrieve.get(-7))) {
 					AlertDialog.Builder dialog = new AlertDialog.Builder(cgeocaches.this);
 					dialog.setTitle(res.getString(R.string.license));
 					dialog.setMessage(res.getString(R.string.err_license));
@@ -222,7 +218,7 @@ public class cgeocaches extends AbstractListActivity {
 					AlertDialog alert = dialog.create();
 					alert.show();
 				} else if (app != null && app.getError(searchId) != null && app.getError(searchId).length() > 0) {
-					warning.showToast(res.getString(R.string.err_download_fail) + app.getError(searchId) + ".");
+					showToast(res.getString(R.string.err_download_fail) + app.getError(searchId) + ".");
 
 					hideLoading();
 					showProgress(false);
@@ -236,7 +232,7 @@ public class cgeocaches extends AbstractListActivity {
 					adapter.setActualHeading(northHeading);
 				}
 			} catch (Exception e) {
-				warning.showToast(res.getString(R.string.err_detail_cache_find_any));
+				showToast(res.getString(R.string.err_detail_cache_find_any));
 				Log.e(cgSettings.tag, "cgeocaches.loadCachesHandler: " + e.toString());
 
 				hideLoading();
@@ -283,7 +279,7 @@ public class cgeocaches extends AbstractListActivity {
 				setAdapter();
 
 				if (cacheList == null) {
-					warning.showToast(res.getString(R.string.err_list_load_fail));
+					showToast(res.getString(R.string.err_list_load_fail));
 					setMoreCaches(false);
 				} else {
 					final Integer count = app.getTotal(searchId);
@@ -299,7 +295,7 @@ public class cgeocaches extends AbstractListActivity {
 				}
 
 				if (app.getError(searchId) != null && app.getError(searchId).length() > 0) {
-					warning.showToast(res.getString(R.string.err_download_fail) + app.getError(searchId) + ".");
+					showToast(res.getString(R.string.err_download_fail) + app.getError(searchId) + ".");
 
 					listFooter.setOnClickListener(new moreCachesListener());
 					hideLoading();
@@ -314,7 +310,7 @@ public class cgeocaches extends AbstractListActivity {
 					adapter.setActualHeading(northHeading);
 				}
 			} catch (Exception e) {
-				warning.showToast(res.getString(R.string.err_detail_cache_find_next));
+				showToast(res.getString(R.string.err_detail_cache_find_next));
 				Log.e(cgSettings.tag, "cgeocaches.loadNextPageHandler: " + e.toString());
 			}
 
@@ -377,10 +373,10 @@ public class cgeocaches extends AbstractListActivity {
 				}
 
 				if (geo == null) {
-					geo = app.startGeo(cgeocaches.this, geoUpdate, base, settings, warning, 0, 0);
+					geo = app.startGeo(cgeocaches.this, geoUpdate, base, settings, 0, 0);
 				}
 				if (settings.livelist == 1 && settings.useCompass == 1 && dir == null) {
-					dir = app.startDir(cgeocaches.this, dirUpdate, warning);
+					dir = app.startDir(cgeocaches.this, dirUpdate);
 				}
 			}
 		}
@@ -407,8 +403,8 @@ public class cgeocaches extends AbstractListActivity {
 					waitDialog.dismiss();
 					waitDialog.setOnCancelListener(null);
 				}
-                                getWindow().clearFlags(WindowManager.LayoutParams.FLAG_KEEP_SCREEN_ON);
-                                warning.showToast(res.getString(R.string.gpx_import_no_files));
+                getWindow().clearFlags(WindowManager.LayoutParams.FLAG_KEEP_SCREEN_ON);
+                showToast(res.getString(R.string.gpx_import_no_files));
 				finish();
 				return;
 			} else {
@@ -502,11 +498,11 @@ public class cgeocaches extends AbstractListActivity {
             }
             else if (-2 == msg.what)
             {
-                warning.showToast(res.getString(R.string.info_fieldnotes_exported_to) + ": " + msg.obj.toString());
+                showToast(res.getString(R.string.info_fieldnotes_exported_to) + ": " + msg.obj.toString());
             }
             else if (-3 == msg.what)
             {
-                warning.showToast(res.getString(R.string.err_fieldnotes_export_failed));
+                showToast(res.getString(R.string.err_fieldnotes_export_failed));
             }
             else
             {
@@ -534,12 +530,7 @@ public class cgeocaches extends AbstractListActivity {
 		super.onCreate(savedInstanceState);
 
 		// init
-		res = this.getResources();
-		app = (cgeoapplication) this.getApplication();
 		app.setAction(action);
-		settings = new cgSettings(this, getSharedPreferences(cgSettings.preferences, 0));
-		base = new cgBase(app, settings, getSharedPreferences(cgSettings.preferences, 0));
-		warning = new cgWarning(this);
 
 		setTheme();
 		setContentView(R.layout.caches);
@@ -562,7 +553,7 @@ public class cgeocaches extends AbstractListActivity {
 		Thread threadPure;
 		cgSearchThread thread;
 
-		if (type.equals("offline") == true) {
+		if (type.equals("offline")) {
 			listId = settings.getLastList();
 			if (listId <= 0) {
 				listId = 1;
@@ -578,7 +569,7 @@ public class cgeocaches extends AbstractListActivity {
 
 			threadPure = new geocachesLoadByOffline(loadCachesHandler, latitude, longitude, listId);
 			threadPure.start();
-		} else if (type.equals("history") == true) {
+		} else if (type.equals("history")) {
 			if (adapter != null) {
 				adapter.setHistoric(true);
 			}
@@ -590,7 +581,7 @@ public class cgeocaches extends AbstractListActivity {
 
 			threadPure = new geocachesLoadByHistory(loadCachesHandler);
 			threadPure.start();
-		} else if (type.equals("nearest") == true) {
+		} else if (type.equals("nearest")) {
 			action = "pending";
 			title = res.getString(R.string.caches_nearby);
 			setTitle(title);
@@ -600,9 +591,9 @@ public class cgeocaches extends AbstractListActivity {
 			thread = new geocachesLoadByCoords(loadCachesHandler, latitude, longitude, cachetype);
 			thread.setRecaptchaHandler(new cgSearchHandler(this, res, thread));
 			thread.start();
-		} else if (type.equals("coordinate") == true) {
+		} else if (type.equals("coordinate")) {
 			action = "planning";
-			title = base.formatCoordinate(latitude, res.getString(R.string.search_lat), true) + " | " + base.formatCoordinate(longitude, res.getString(R.string.search_lon), true);
+			title = cgBase.formatCoordinate(latitude, res.getString(R.string.search_lat), true) + " | " + cgBase.formatCoordinate(longitude, res.getString(R.string.search_lon), true);
 			setTitle(title);
 			showProgress(true);
 			setLoadingCaches();
@@ -610,7 +601,7 @@ public class cgeocaches extends AbstractListActivity {
 			thread = new geocachesLoadByCoords(loadCachesHandler, latitude, longitude, cachetype);
 			thread.setRecaptchaHandler(new cgSearchHandler(this, res, thread));
 			thread.start();
-		} else if (type.equals("keyword") == true) {
+		} else if (type.equals("keyword")) {
 			title = keyword;
 			setTitle(title);
 			showProgress(true);
@@ -619,7 +610,7 @@ public class cgeocaches extends AbstractListActivity {
 			thread = new geocachesLoadByKeyword(loadCachesHandler, keyword, cachetype);
 			thread.setRecaptchaHandler(new cgSearchHandler(this, res, thread));
 			thread.start();
-		} else if (type.equals("address") == true) {
+		} else if (type.equals("address")) {
 			action = "planning";
 			if (address != null && address.length() > 0) {
 				title = address;
@@ -627,7 +618,7 @@ public class cgeocaches extends AbstractListActivity {
 				showProgress(true);
 				setLoadingCaches();
 			} else {
-				title = base.formatCoordinate(latitude, res.getString(R.string.search_lat), true) + " | " + base.formatCoordinate(longitude, res.getString(R.string.search_lon), true);
+				title = cgBase.formatCoordinate(latitude, res.getString(R.string.search_lat), true) + " | " + cgBase.formatCoordinate(longitude, res.getString(R.string.search_lon), true);
 				setTitle(title);
 				showProgress(true);
 				setLoadingCaches();
@@ -636,7 +627,7 @@ public class cgeocaches extends AbstractListActivity {
 			thread = new geocachesLoadByCoords(loadCachesHandler, latitude, longitude, cachetype);
 			thread.setRecaptchaHandler(new cgSearchHandler(this, res, thread));
 			thread.start();
-		} else if (type.equals("username") == true) {
+		} else if (type.equals("username")) {
 			title = username;
 			setTitle(title);
 			showProgress(true);
@@ -645,7 +636,7 @@ public class cgeocaches extends AbstractListActivity {
 			thread = new geocachesLoadByUserName(loadCachesHandler, username, cachetype);
 			thread.setRecaptchaHandler(new cgSearchHandler(this, res, thread));
 			thread.start();
-		} else if (type.equals("owner") == true) {
+		} else if (type.equals("owner")) {
 			title = username;
 			setTitle(title);
 			showProgress(true);
@@ -756,6 +747,7 @@ public class cgeocaches extends AbstractListActivity {
 		comparators.put(res.getString(R.string.caches_sort_rating), MENU_SORT_RATING);
 		comparators.put(res.getString(R.string.caches_sort_vote), MENU_SORT_VOTE);
 		comparators.put(res.getString(R.string.caches_sort_inventory), MENU_SORT_INVENTORY);
+		comparators.put(res.getString(R.string.caches_sort_date), MENU_SORT_DATE);
 
 		ArrayList<String> sortedLabels = new ArrayList<String>(comparators.keySet());
 		Collections.sort(sortedLabels);
@@ -808,7 +800,7 @@ public class cgeocaches extends AbstractListActivity {
 		super.onPrepareOptionsMenu(menu);
 
 		try {
-			if (adapter != null && adapter.getSelectMode() == true) {
+			if (adapter != null && adapter.getSelectMode()) {
 				menu.findItem(MENU_SWITCH_SELECT_MODE).setTitle(res.getString(R.string.caches_select_mode_exit));
 				menu.findItem(MENU_INVERT_SELECTION).setVisible(true);
 			} else {
@@ -816,7 +808,7 @@ public class cgeocaches extends AbstractListActivity {
 				menu.findItem(MENU_INVERT_SELECTION).setVisible(false);
 			}
 
-			if (type != null && type.equals("offline") == true) { // only offline list
+			if (type != null && type.equals("offline")) { // only offline list
 				if (adapter != null && adapter.getChecked() > 0) {
 					menu.findItem(MENU_DROP_CACHES).setTitle(res.getString(R.string.caches_drop_selected) + " (" + adapter.getChecked() + ")");
 				} else {
@@ -845,7 +837,7 @@ public class cgeocaches extends AbstractListActivity {
 			                                   SUBMENU_FILTER,
 			                                   MENU_REFRESH_STORED};
 
-			boolean menuEnabled = cacheList != null && cacheList.size() > 0;
+			boolean menuEnabled = cacheList.size() > 0;
 		    for (int itemId : hideIfEmptyList)
 		    {
 		        MenuItem item = menu.findItem(itemId);
@@ -965,6 +957,9 @@ public class cgeocaches extends AbstractListActivity {
 				return false;
 			case MENU_SORT_INVENTORY:
 				setComparator(item, new InventoryComparator());
+				return false;
+			case MENU_SORT_DATE:
+				setComparator(item, new DateComparator());
 				return false;
 			case SUBMENU_FILTER_TYPE:
 				selectedFilter = res.getString(R.string.caches_filter_type);
@@ -1128,7 +1123,7 @@ public class cgeocaches extends AbstractListActivity {
 			return true;
 		} else if (id == MENU_LOG_VISIT) {
 			if (cache.cacheid == null || cache.cacheid.length() == 0) {
-				warning.showToast(res.getString(R.string.err_cannot_log_visit));
+				showToast(res.getString(R.string.err_cannot_log_visit));
 				return true;
 			}
 
@@ -1200,7 +1195,7 @@ public class cgeocaches extends AbstractListActivity {
 		} else if (id == MENU_FILTER_TYPE_GPS) {
 			return setFilter(new cgFilterByType("gps"));
 		} else if (id == MENU_DROP_CACHE) {
-			base.dropCache(app, this, cache, new Handler() {
+			cgBase.dropCache(app, this, cache, new Handler() {
 				@Override
 				public void handleMessage(Message msg) {
 					switchList(listId, -1); // refresh
@@ -1220,7 +1215,7 @@ public class cgeocaches extends AbstractListActivity {
 		lastMenuInfo = info;
 
 		return NavigationAppFactory.onMenuItemSelected(item, geo, this,
-				res, warning, cache, null, null, null);
+				res, cache, null, null, null);
 	}
 
 	private boolean setFilter(cgFilter filter) {
@@ -1235,9 +1230,9 @@ public class cgeocaches extends AbstractListActivity {
 	public boolean onKeyDown(int keyCode, KeyEvent event) {
 		if (keyCode == KeyEvent.KEYCODE_BACK) {
 			if (adapter != null) {
-				if (adapter.resetChecks() == true) {
+				if (adapter.resetChecks()) {
 					return true;
-				} else if (adapter.getSelectMode() == true) {
+				} else if (adapter.getSelectMode()) {
 					adapter.setSelectMode(false, true);
 					return true;
 				}
@@ -1321,10 +1316,10 @@ public class cgeocaches extends AbstractListActivity {
 	private void init() {
 		// sensor & geolocation manager
 		if (geo == null) {
-			geo = app.startGeo(this, geoUpdate, base, settings, warning, 0, 0);
+			geo = app.startGeo(this, geoUpdate, base, settings, 0, 0);
 		}
 		if (settings.livelist == 1 && settings.useCompass == 1 && dir == null) {
-			dir = app.startDir(this, dirUpdate, warning);
+			dir = app.startDir(this, dirUpdate);
 		}
 
 		if (cacheList != null) {
@@ -1387,10 +1382,10 @@ public class cgeocaches extends AbstractListActivity {
 					}
 
 					if (geo == null) {
-						geo = app.startGeo(cgeocaches.this, geoUpdate, base, settings, warning, 0, 0);
+						geo = app.startGeo(cgeocaches.this, geoUpdate, base, settings, 0, 0);
 					}
 					if (settings.livelist == 1 && settings.useCompass == 1 && dir == null) {
-						dir = app.startDir(cgeocaches.this, dirUpdate, warning);
+						dir = app.startDir(cgeocaches.this, dirUpdate);
 					}
 				} catch (Exception e) {
 					Log.e(cgSettings.tag, "cgeocaches.onOptionsItemSelected.onCancel: " + e.toString());
@@ -1543,10 +1538,10 @@ public class cgeocaches extends AbstractListActivity {
 					}
 
 					if (geo == null) {
-						geo = app.startGeo(cgeocaches.this, geoUpdate, base, settings, warning, 0, 0);
+						geo = app.startGeo(cgeocaches.this, geoUpdate, base, settings, 0, 0);
 					}
 					if (settings.livelist == 1 && settings.useCompass == 1 && dir == null) {
-						dir = app.startDir(cgeocaches.this, dirUpdate, warning);
+						dir = app.startDir(cgeocaches.this, dirUpdate);
 					}
 				} catch (Exception e) {
 					Log.e(cgSettings.tag, "cgeocaches.importWeb.onCancel: " + e.toString());
@@ -1642,7 +1637,7 @@ public class cgeocaches extends AbstractListActivity {
 						if (geo.bearingNow != null) {
 							adapter.setActualHeading(geo.bearingNow);
 						} else {
-							adapter.setActualHeading(new Double(0));
+							adapter.setActualHeading(Double.valueOf(0));
 						}
 					}
 					if (northHeading != null) {
@@ -1756,7 +1751,7 @@ public class cgeocaches extends AbstractListActivity {
 			cachetype = cachetypeIn;
 
 			if (latitude == null || longitude == null) {
-				warning.showToast(res.getString(R.string.warn_no_coordinates));
+				showToast(res.getString(R.string.warn_no_coordinates));
 
 				finish();
 				return;
@@ -1790,7 +1785,7 @@ public class cgeocaches extends AbstractListActivity {
 			cachetype = cachetypeIn;
 
 			if (keyword == null) {
-				warning.showToast(res.getString(R.string.warn_no_keyword));
+				showToast(res.getString(R.string.warn_no_keyword));
 
 				finish();
 				return;
@@ -1823,7 +1818,7 @@ public class cgeocaches extends AbstractListActivity {
 			cachetype = cachetypeIn;
 
 			if (username == null || username.length() == 0) {
-				warning.showToast(res.getString(R.string.warn_no_username));
+				showToast(res.getString(R.string.warn_no_username));
 
 				finish();
 				return;
@@ -1856,7 +1851,7 @@ public class cgeocaches extends AbstractListActivity {
 			cachetype = cachetypeIn;
 
 			if (username == null || username.length() == 0) {
-				warning.showToast(res.getString(R.string.warn_no_username));
+				showToast(res.getString(R.string.warn_no_username));
 
 				finish();
 				return;
@@ -1917,7 +1912,7 @@ public class cgeocaches extends AbstractListActivity {
 				}
 
 				try {
-					if (needToStop == true) {
+					if (needToStop) {
 						Log.i(cgSettings.tag, "Stopped storing process.");
 						break;
 					}
@@ -1936,7 +1931,7 @@ public class cgeocaches extends AbstractListActivity {
 						}
 					}
 
-					if (needToStop == true) {
+					if (needToStop) {
 						Log.i(cgSettings.tag, "Stopped storing process.");
 						break;
 					}
@@ -2001,7 +1996,7 @@ public class cgeocaches extends AbstractListActivity {
 				if (deviceCode == null) {
 					deviceCode = "";
 				}
-				cgResponse responseFromWeb = base.request(false, "send2cgeo.carnero.cc", "/readCode.php", "GET", "d=" + cgBase.urlencode_rfc3986(deviceCode), 0, true);
+				cgResponse responseFromWeb = base.request(false, "send2.cgeo.org", "/read.html", "GET", "code=" + cgBase.urlencode_rfc3986(deviceCode), 0, true);
 
 				if ((responseFromWeb.getStatusCode() == 200)
 						&& (responseFromWeb.getData().length() > 2)) {
@@ -2091,7 +2086,7 @@ public class cgeocaches extends AbstractListActivity {
 				}
 
 				try {
-					if (needToStop == true) {
+					if (needToStop) {
 						Log.i(cgSettings.tag, "Stopped dropping process.");
 						break;
 					}
@@ -2142,7 +2137,7 @@ public class cgeocaches extends AbstractListActivity {
                 }
 
                 try {
-                    if (needToStop == true) {
+                    if (needToStop) {
                         Log.i(cgSettings.tag, "Stopped removing process.");
                         break;
                     }
@@ -2212,7 +2207,7 @@ public class cgeocaches extends AbstractListActivity {
                 }
 
                 try {
-                    if (needToStop == true)
+                    if (needToStop)
                     {
                         Log.i(cgSettings.tag, "Stopped exporting process.");
                         break;
@@ -2393,7 +2388,7 @@ public class cgeocaches extends AbstractListActivity {
 			if (checked > 0) {
 				final ArrayList<cgCache> cacheListTemp = new ArrayList<cgCache>(cacheList);
 				for (cgCache cache : cacheListTemp) {
-					if (cache.statusChecked != false) {
+					if (cache.statusChecked) {
 						app.moveToList(cache.geocode, listId);
 					}
 				}
@@ -2422,9 +2417,9 @@ public class cgeocaches extends AbstractListActivity {
 					int newId = app.createList(value);
 
 					if (newId >= 10) {
-						warning.showToast(res.getString(R.string.list_dialog_create_ok));
+						showToast(res.getString(R.string.list_dialog_create_ok));
 					} else {
-						warning.showToast(res.getString(R.string.list_dialog_create_err));
+						showToast(res.getString(R.string.list_dialog_create_err));
 					}
 				}
 			}
@@ -2448,10 +2443,10 @@ public class cgeocaches extends AbstractListActivity {
 				boolean status = app.removeList(listId);
 
 				if (status) {
-					warning.showToast(res.getString(R.string.list_dialog_remove_ok));
+					showToast(res.getString(R.string.list_dialog_remove_ok));
 					switchListById(1);
 				} else {
-					warning.showToast(res.getString(R.string.list_dialog_remove_err));
+					showToast(res.getString(R.string.list_dialog_remove_err));
 				}
 			}
 		});
@@ -2465,8 +2460,8 @@ public class cgeocaches extends AbstractListActivity {
 	}
 
 	public void goMap(View view) {
-		if (searchId == null || searchId == 0 || cacheList == null || cacheList.isEmpty() == true) {
-			warning.showToast(res.getString(R.string.warn_no_cache_coord));
+		if (searchId == null || searchId == 0 || cacheList == null || cacheList.isEmpty()) {
+			showToast(res.getString(R.string.warn_no_cache_coord));
 
 			return;
 		}
@@ -2479,9 +2474,9 @@ public class cgeocaches extends AbstractListActivity {
 	}
 
 	public void goManual(View view) {
-		if (type != null && type.equals("offline") == true) {
+		if (type != null && type.equals("offline")) {
 			ActivityMixin.goManual(this, "c:geo-stored");
-		} else if (type != null && type.equals("history") == true) {
+		} else if (type != null && type.equals("history")) {
 			ActivityMixin.goManual(this, "c:geo-history");
 		} else {
 			ActivityMixin.goManual(this, "c:geo-nearby");
