@@ -11,7 +11,6 @@ import android.content.Context;
 import android.content.Intent;
 import android.content.SharedPreferences;
 import android.content.res.Configuration;
-import android.content.res.Resources;
 import android.os.Bundle;
 import android.text.format.DateFormat;
 import android.util.Log;
@@ -37,7 +36,7 @@ import cgeo.geocaching.apps.cache.navi.NavigationAppFactory;
 
 public class cgeopoint extends AbstractActivity {
 
-	private class DestinationHistoryAdapter extends ArrayAdapter<cgDestination> {
+	private static class DestinationHistoryAdapter extends ArrayAdapter<cgDestination> {
 		private LayoutInflater inflater = null;
 
 		public DestinationHistoryAdapter(Context context,
@@ -60,9 +59,9 @@ public class cgeopoint extends AbstractActivity {
 					.findViewById(R.id.simple_way_point_latitude);
 			TextView date = (TextView) convertView.findViewById(R.id.date);
 
-			String lonString = base.formatCoordinate(loc.getLongitude(), "lon",
+			String lonString = cgBase.formatCoordinate(loc.getLongitude(), "lon",
 					true);
-			String latString = base.formatCoordinate(loc.getLatitude(), "lat",
+			String latString = cgBase.formatCoordinate(loc.getLatitude(), "lat",
 					true);
 
 			longitude.setText(lonString);
@@ -83,12 +82,6 @@ public class cgeopoint extends AbstractActivity {
 		}
 	}
 
-	private Resources res = null;
-	private cgeoapplication app = null;
-	private cgSettings settings = null;
-	private SharedPreferences prefs = null;
-	private cgBase base = null;
-	private cgWarning warning = null;
 	private cgGeo geo = null;
 	private cgUpdateLoc geoUpdate = new update();
 	private EditText latEdit = null;
@@ -108,14 +101,6 @@ public class cgeopoint extends AbstractActivity {
 	@Override
 	public void onCreate(Bundle savedInstanceState) {
 		super.onCreate(savedInstanceState);
-
-		// init
-		app = (cgeoapplication) this.getApplication();
-		res = this.getResources();
-		settings = new cgSettings(this, this.getSharedPreferences(cgSettings.preferences, 0));
-		prefs = getSharedPreferences(cgSettings.preferences, 0);
-		base = new cgBase(app, settings, this.getSharedPreferences(cgSettings.preferences, 0));
-		warning = new cgWarning(this);
 
 		setTheme();
 		setContentView(R.layout.point);
@@ -252,7 +237,7 @@ public class cgeopoint extends AbstractActivity {
 
 	private void init() {
 		if (geo == null) {
-			geo = app.startGeo(this, geoUpdate, base, settings, warning, 0, 0);
+			geo = app.startGeo(this, geoUpdate, base, settings, 0, 0);
 		}
 
 		EditText latitudeEdit = (EditText) findViewById(R.id.latitude);
@@ -275,9 +260,9 @@ public class cgeopoint extends AbstractActivity {
 			}
 		});
 
-		if (prefs.contains("anylatitude") == true && prefs.contains("anylongitude") == true) {
-			latitudeEdit.setText(base.formatCoordinate(new Double(prefs.getFloat("anylatitude", 0f)), "lat", true));
-			longitudeEdit.setText(base.formatCoordinate(new Double(prefs.getFloat("anylongitude", 0f)), "lon", true));
+		if (prefs.contains("anylatitude") && prefs.contains("anylongitude")) {
+			latitudeEdit.setText(cgBase.formatCoordinate(Double.valueOf(prefs.getFloat("anylatitude", 0f)), "lat", true));
+			longitudeEdit.setText(cgBase.formatCoordinate(Double.valueOf(prefs.getFloat("anylongitude", 0f)), "lon", true));
 		}
 
 		Button buttonCurrent = (Button) findViewById(R.id.current);
@@ -350,7 +335,7 @@ public class cgeopoint extends AbstractActivity {
 			return true;
 		}
 
-		return NavigationAppFactory.onMenuItemSelected(item, geo, this, res, warning, null, null, null, coords);
+		return NavigationAppFactory.onMenuItemSelected(item, geo, this, res, null, null, null, coords);
 	}
 
 	private void addToHistory(ArrayList<Double> coords) {
@@ -387,7 +372,7 @@ public class cgeopoint extends AbstractActivity {
 
 			getDestionationHistoryAdapter().notifyDataSetChanged();
 
-			warning.showToast(res.getString(R.string.search_remove_destination));
+			showToast(res.getString(R.string.search_remove_destination));
 		}
 	}
 
@@ -404,7 +389,7 @@ public class cgeopoint extends AbstractActivity {
 
 			getDestionationHistoryAdapter().notifyDataSetChanged();
 
-			warning.showToast(res.getString(R.string.search_history_cleared));
+			showToast(res.getString(R.string.search_history_cleared));
 		}
 	}
 
@@ -414,7 +399,8 @@ public class cgeopoint extends AbstractActivity {
 
 	private void navigateTo(List<Double> coords) {
 		if (coords == null || coords.get(0) == null || coords.get(1) == null) {
-			warning.showToast(res.getString(R.string.err_location_unknown));
+			showToast(res.getString(R.string.err_location_unknown));
+			return;
 		}
 
 		cgeonavigate navigateActivity = new cgeonavigate();
@@ -432,7 +418,8 @@ public class cgeopoint extends AbstractActivity {
 		ArrayList<Double> coords = getDestination();
 
 		if (coords == null || coords.get(0) == null || coords.get(1) == null) {
-			warning.showToast(res.getString(R.string.err_location_unknown));
+			showToast(res.getString(R.string.err_location_unknown));
+			return;
 		}
 
 		cgeocaches cachesActivity = new cgeocaches();
@@ -465,8 +452,8 @@ public class cgeopoint extends AbstractActivity {
 					lonEdit = (EditText) findViewById(R.id.longitude);
 				}
 
-				latEdit.setHint(base.formatCoordinate(geo.latitudeNow, "lat", false));
-				lonEdit.setHint(base.formatCoordinate(geo.longitudeNow, "lon", false));
+				latEdit.setHint(cgBase.formatCoordinate(geo.latitudeNow, "lat", false));
+				lonEdit.setHint(cgBase.formatCoordinate(geo.longitudeNow, "lon", false));
 			} catch (Exception e) {
 				Log.w(cgSettings.tag, "Failed to update location.");
 			}
@@ -477,12 +464,12 @@ public class cgeopoint extends AbstractActivity {
 
 		public void onClick(View arg0) {
 			if (geo == null || geo.latitudeNow == null || geo.longitudeNow == null) {
-				warning.showToast(res.getString(R.string.err_point_unknown_position));
+				showToast(res.getString(R.string.err_point_unknown_position));
 				return;
 			}
 
-			((EditText) findViewById(R.id.latitude)).setText(base.formatCoordinate(geo.latitudeNow, "lat", true));
-			((EditText) findViewById(R.id.longitude)).setText(base.formatCoordinate(geo.longitudeNow, "lon", true));
+			((EditText) findViewById(R.id.latitude)).setText(cgBase.formatCoordinate(geo.latitudeNow, "lat", true));
+			((EditText) findViewById(R.id.longitude)).setText(cgBase.formatCoordinate(geo.longitudeNow, "lon", true));
 
 			changed = false;
 		}
@@ -500,22 +487,22 @@ public class cgeopoint extends AbstractActivity {
 
 		if ((bearingText == null || bearingText.length() == 0) && (distanceText == null || distanceText.length() == 0)
 				&& (latText == null || latText.length() == 0) && (lonText == null || lonText.length() == 0)) {
-			warning.showToast(res.getString(R.string.err_point_no_position_given));
+			showToast(res.getString(R.string.err_point_no_position_given));
 			return null;
 		}
 
 		if (latText != null && latText.length() > 0 && lonText != null && lonText.length() > 0) {
 			// latitude & longitude
-			HashMap<String, Object> latParsed = base.parseCoordinate(latText, "lat");
-			HashMap<String, Object> lonParsed = base.parseCoordinate(lonText, "lon");
+			HashMap<String, Object> latParsed = cgBase.parseCoordinate(latText, "lat");
+			HashMap<String, Object> lonParsed = cgBase.parseCoordinate(lonText, "lon");
 
 			if (latParsed == null || latParsed.get("coordinate") == null || latParsed.get("string") == null) {
-				warning.showToast(res.getString(R.string.err_parse_lat));
+				showToast(res.getString(R.string.err_parse_lat));
 				return null;
 			}
 
 			if (lonParsed == null || lonParsed.get("coordinate") == null || lonParsed.get("string") == null) {
-				warning.showToast(res.getString(R.string.err_parse_lon));
+				showToast(res.getString(R.string.err_parse_lon));
 				return null;
 			}
 
@@ -523,7 +510,7 @@ public class cgeopoint extends AbstractActivity {
 			longitude = (Double) lonParsed.get("coordinate");
 		} else {
 			if (geo == null || geo.latitudeNow == null || geo.longitudeNow == null) {
-				warning.showToast(res.getString(R.string.err_point_curr_position_unavailable));
+				showToast(res.getString(R.string.err_point_curr_position_unavailable));
 				return null;
 			}
 
@@ -540,7 +527,7 @@ public class cgeopoint extends AbstractActivity {
 				// probably not a number
 			}
 			if (bearing == null) {
-				warning.helpDialog(res.getString(R.string.err_point_bear_and_dist_title), res.getString(R.string.err_point_bear_and_dist));
+				helpDialog(res.getString(R.string.err_point_bear_and_dist_title), res.getString(R.string.err_point_bear_and_dist));
 				return null;
 			}
 
@@ -558,15 +545,15 @@ public class cgeopoint extends AbstractActivity {
 			Matcher matcherD = patternD.matcher(distanceText);
 			Matcher matcherE = patternE.matcher(distanceText);
 
-			if (matcherA.find() == true && matcherA.groupCount() > 0) {
+			if (matcherA.find() && matcherA.groupCount() > 0) {
 				distance = (new Double(matcherA.group(1))) * 0.001;
-			} else if (matcherB.find() == true && matcherB.groupCount() > 0) {
+			} else if (matcherB.find() && matcherB.groupCount() > 0) {
 				distance = new Double(matcherB.group(1));
-			} else if (matcherC.find() == true && matcherC.groupCount() > 0) {
+			} else if (matcherC.find() && matcherC.groupCount() > 0) {
 				distance = (new Double(matcherC.group(1))) * 0.0003048;
-			} else if (matcherD.find() == true && matcherD.groupCount() > 0) {
+			} else if (matcherD.find() && matcherD.groupCount() > 0) {
 				distance = (new Double(matcherD.group(1))) * 0.0009144;
-			} else if (matcherE.find() == true && matcherE.groupCount() > 0) {
+			} else if (matcherE.find() && matcherE.groupCount() > 0) {
 				distance = (new Double(matcherE.group(1))) * 1.609344;
 			} else {
 				try {
@@ -581,20 +568,20 @@ public class cgeopoint extends AbstractActivity {
 			}
 
 			if (distance == null) {
-				warning.showToast(res.getString(R.string.err_parse_dist));
+				showToast(res.getString(R.string.err_parse_dist));
 				return null;
 			}
 
 			Double latParsed = null;
 			Double lonParsed = null;
 
-			HashMap<String, Double> coordsDst = base.getRadialDistance(latitude, longitude, bearing, distance);
+			HashMap<String, Double> coordsDst = cgBase.getRadialDistance(latitude, longitude, bearing, distance);
 
 			latParsed = coordsDst.get("latitude");
 			lonParsed = coordsDst.get("longitude");
 
 			if (latParsed == null || lonParsed == null) {
-				warning.showToast(res.getString(R.string.err_point_location_error));
+				showToast(res.getString(R.string.err_point_location_error));
 				return null;
 			}
 
@@ -613,7 +600,7 @@ public class cgeopoint extends AbstractActivity {
 	}
 
 	private void saveCoords(Double latitude, Double longitude) {
-		if (changed == true && latitude == null || longitude == null) {
+		if (changed && latitude != null && longitude != null) {
 			SharedPreferences.Editor edit = prefs.edit();
 
 			edit.putFloat("anylatitude", latitude.floatValue());
